; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_cacheplcs.c_cache_lfu_policy_remove_item.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_cacheplcs.c_cache_lfu_policy_remove_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_policy_ = type { i32 }
%struct.cache_policy_item_ = type { i32 }
%struct.cache_lfu_policy_ = type { i32* }
%struct.cache_lfu_policy_item_ = type { i64 }

@entries = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_policy_*, %struct.cache_policy_item_*)* @cache_lfu_policy_remove_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_lfu_policy_remove_item(%struct.cache_policy_* %0, %struct.cache_policy_item_* %1) #0 {
  %3 = alloca %struct.cache_policy_*, align 8
  %4 = alloca %struct.cache_policy_item_*, align 8
  %5 = alloca %struct.cache_lfu_policy_*, align 8
  %6 = alloca %struct.cache_lfu_policy_item_*, align 8
  store %struct.cache_policy_* %0, %struct.cache_policy_** %3, align 8
  store %struct.cache_policy_item_* %1, %struct.cache_policy_item_** %4, align 8
  %7 = call i32 @TRACE_IN(void (%struct.cache_policy_*, %struct.cache_policy_item_*)* @cache_lfu_policy_remove_item)
  %8 = load %struct.cache_policy_*, %struct.cache_policy_** %3, align 8
  %9 = bitcast %struct.cache_policy_* %8 to %struct.cache_lfu_policy_*
  store %struct.cache_lfu_policy_* %9, %struct.cache_lfu_policy_** %5, align 8
  %10 = load %struct.cache_policy_item_*, %struct.cache_policy_item_** %4, align 8
  %11 = bitcast %struct.cache_policy_item_* %10 to %struct.cache_lfu_policy_item_*
  store %struct.cache_lfu_policy_item_* %11, %struct.cache_lfu_policy_item_** %6, align 8
  %12 = load %struct.cache_lfu_policy_*, %struct.cache_lfu_policy_** %5, align 8
  %13 = getelementptr inbounds %struct.cache_lfu_policy_, %struct.cache_lfu_policy_* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load %struct.cache_lfu_policy_item_*, %struct.cache_lfu_policy_item_** %6, align 8
  %16 = getelementptr inbounds %struct.cache_lfu_policy_item_, %struct.cache_lfu_policy_item_* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds i32, i32* %14, i64 %17
  %19 = load %struct.cache_lfu_policy_item_*, %struct.cache_lfu_policy_item_** %6, align 8
  %20 = load i32, i32* @entries, align 4
  %21 = call i32 @TAILQ_REMOVE(i32* %18, %struct.cache_lfu_policy_item_* %19, i32 %20)
  %22 = call i32 @TRACE_OUT(void (%struct.cache_policy_*, %struct.cache_policy_item_*)* @cache_lfu_policy_remove_item)
  ret void
}

declare dso_local i32 @TRACE_IN(void (%struct.cache_policy_*, %struct.cache_policy_item_*)*) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.cache_lfu_policy_item_*, i32) #1

declare dso_local i32 @TRACE_OUT(void (%struct.cache_policy_*, %struct.cache_policy_item_*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
